--- a/src/main/resources/templates/hospitals/hospital-registration-form.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-form.html
@@ -57,13 +57,13 @@
                                 <input type="text" name="phoneNumber" id="phone-number" class="form-control" placeholder="890231214560" />
                             </div>
                         </div>
-                        <div class="m-1 mb-4">
+                        <div class="m-1 mb-3">
                             <label for="email" class="form-label">Почта, на которую придёт код для регистрации в приложении <span class="text-danger fs-6"> *</span></label>
                             <input type="email" name="email" id="email" class="form-control" placeholder="example@mail.com" />
                         </div>
                         <div class="m-1 mb-4">
                             <label for="comment" class="form-label">Комментарий</label>
-                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное будущее использование этого приложения вашим медицинским учреждением"></textarea>
+                            <textarea name="comment" id="comment" class="form-control" rows="3" placeholder="Здесь вы можете написать что-нибудь про потенциальное использование этого приложения вашим медицинским учреждением"></textarea>
                         </div>
                         <hr />
                         <button type="submit" class="btn btn-lg btn-primary my-1">Отправить</button>
@@ -78,8 +78,8 @@
         <div th:replace="~{/fragments/modal/code-input-modal :: code-input-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/registration/code-check.js" th:src="@{/js/registration/code-check.js}"></script>
         <script src="../../static/js/hospitals/hospital-registration-form.js" th:src="@{/js/hospitals/hospital-registration-form.js}"></script>
+        <script src="../../static/js/registration/code-check.js" th:src="@{/js/registration/code-check.js}"></script>
         <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
