--- a/src/main/resources/templates/hospitals/hospital-registration-request.html
+++ b/src/main/resources/templates/hospitals/hospital-registration-request.html
@@ -19,14 +19,15 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row mb-5">
-                <div class="col-12 text-center">
+                <div class="col-12">
                     <h1 th:text="${request.hospital.name}" class="fs-4">Национальный медицинский исследовательский центр имени В. А. Алмазова</h1>
-                    <p class="fs-4 mb-0">
+                    <p class="fs-5 mb-0">
                         OID:
                         <span th:text="${request.hospital.oid}">1.2.134.65643.1234.34435.984</span>
                     </p>
                 </div>
             </div>
+            <hr class="my-5" />
             <!---->
             <div class="row mb-5">
                 <div class="col-12">
@@ -77,15 +78,19 @@
                 </div>
             </div>
             <!---->
-            <div class="row mb-0">
+            <div class="row">
                 <div class="col-12">
                     <h3 class="fs-4">Статус</h3>
                     <div th:switch="${#strings.toString(request.hospital.currentState)}">
                         <p th:case="'WAITING_CODE'" class="fs-6 mb-0">
                             <span>Ожидает вашего решения:</span>
-                            <button type="button" class="btn btn-sm btn-success" data-bs-toggle="modal" data-bs-target="#code-generation-modal">Принять</button>
-                            <span> / </span>
-                            <button type="button" class="btn btn-sm btn-danger" id="decline-request">Отклонить</button>
+                            <a href="#" data-bs-toggle="modal" data-bs-target="#code-generation-modal" class="text-decoration-none">
+                                <img width="24" src="../../static/svg/assign-to-doctor.svg" th:src="@{/svg/assign-to-doctor.svg}" alt="Принять" />
+                            </a>
+                            <span class="fw-bold"> / </span>
+                            <a href="#" class="text-decoration-none">
+                                <img width="24" src="../../static/svg/remove-from-doctor.svg" th:src="@{/svg/remove-from-doctor.svg}" alt="Отклонить" id="decline-request" />
+                            </a>
                         </p>
                         <p th:case="'WAITING_REGISTRATION'" class="fs-6 mb-0">
                             Ожидает регистрации администратора. Код был выдан
