--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -2,8 +2,8 @@
     --my-bg-form: #f2f3f5;
     --my-bg-indicator: #f2f3f5;
     --my-bg-filter: #f2f3f5;
-    --my-bg-contacts-area: #f2f3f5;
-    --my-bg-messages-area: url("/svg/pattern.svg");
+    --my-bg-contacts-block: #f2f3f5;
+    --my-bg-messages-block: url("/svg/pattern.svg");
     --my-bg-message-author: #f2f5f8;
     --my-bg-message-recipient: #f1f9ef;
 }
@@ -85,60 +85,31 @@ form,
     }
 }
 
-.messenger-area {
-    /*min-height: 65vh;
-    max-height: 65vh;*/
-}
-
-.messenger-area::-webkit-scrollbar {
-    width: 0px;
-}
-
-.messenger-contacts-area {
+.messenger-contacts-block {
     min-height: 65vh;
     max-height: 65vh;
     overflow-y: auto;
-    background-color: var(--my-bg-contacts-area);
+    background-color: var(--my-bg-contacts-block);
     hr {
         margin-left: -9px;
         margin-right: -9px;
     }
 }
 
-.messenger-messages-area {
+.messenger-contacts-block::-webkit-scrollbar {
+    width: 0px;
+}
+
+.messenger-messages-block {
     min-height: 65vh;
     max-height: 65vh;
     overflow-y: auto;
-    background-image: var(--my-bg-messages-area);
+    background-image: var(--my-bg-messages-block);
 }
 
-.messenger-contacts-area::-webkit-scrollbar {
+.messenger-messages-block::-webkit-scrollbar {
     width: 0px;
 }
-
-.messenger-messages-area::-webkit-scrollbar {
-    width: 0px;
-}
-
-/*.messenger {
-    max-height: 80vh;
-    overflow-y: auto;
-}
-
-.messenger-form {
-    background-image: url("/svg/pattern.svg");
-}*/
-
-/*.messenger::-webkit-scrollbar {
-    width: 0px;
-}
-
-.byb {
-    hr {
-        margin-left: -9px;
-        margin-right: -9px;
-    }
-}*/
 
 .bg-message-author {
     background-color: var(--my-bg-message-author);
